fix the problem

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     />
 </head>
 <body>
-
-  <h1 class="text-blue-600 dark:text-sky-400">Hello World</h1>
-
+<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+  زر مصمم بـ Tailwind
+</button>
     <script src="src/js/main.js"></script>
 </body>
 </html>
