--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <!-- Start NaveBar -->
         <div class="navbar h-[50px] bg-blue-950 p-3">
           <div class="profil h-full w-fit ml-auto flex items-center gap-2">
-            <img class="w-[20px] rounded-full" src="avatar.avif" alt="">
+            <img class="w-5 rounded-full" src="/public/avatar.avif" alt="">
             <h1 class="font-bold text-white">Mouad</h1>
           </div>
         </div>
