fix sidebar color

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <div class="flex w-full">
       <!-- Start Sidebar -->
-      <div class="z-10 sidebar dark:bg-blue-950 text-white min-w-[200px] h-screen p-5 flex flex-col justify-between shadow-[2px_0px_10px_#444]">
+      <div class="z-10 sidebar bg-blue-950 text-white min-w-[200px] h-screen p-5 flex flex-col justify-between shadow-[2px_0px_10px_#444]">
         <div>
           <div class="logo text-center mb-10 ">
             <img src="" alt="">
