add presence file

--- a/presence.html
+++ b/presence.html
@@ -4,7 +4,7 @@
  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <title>Landing page</title>
+  <title>page Presence</title>
   <!-- Tailwind css cdn -->
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <!-- file css  -->
@@ -34,12 +34,12 @@
   
           <ul class="list flex flex-col gap-y-3">
             <li>
-              <a href="#" class="block p-1 rounded-lg bg-sky-800 transition-all duration-300  border-transparent hover:border-blue-500 hover:pl-2">
+              <a href="#" class="block p-1 rounded-lg hover:bg-sky-800 transition-all duration-300  border-transparent hover:border-blue-500 hover:pl-2">
                 <i class="fa-solid fa-house mr-2"></i>Tableux de bord
               </a>
             </li>
             <li><a href="#" class="block p-1 rounded-lg hover:bg-sky-800 transition-all duration-300  border-transparent hover:border-blue-500 hover:pl-2"><i class="fa-solid fa-users mr-2"></i>Etudiants</a></li>
-            <li><a href="presence.html" class="block p-1 rounded-lg hover:bg-sky-800 transition-all duration-300  border-transparent hover:border-sky-500 hover:pl-2"><i class="fa-solid fa-user mr-2"></i>Presence</a></li>
+            <li><a href="#" class="block p-1 rounded-lg bg-sky-800 transition-all duration-300  border-transparent hover:border-sky-500 hover:pl-2"><i class="fa-solid fa-user mr-2"></i>Presence</a></li>
             <li><a href="#" class="block p-1 rounded-lg hover:bg-sky-800 transition-all duration-300  border-transparent hover:border-blue-500 hover:pl-2"><i class="fa-solid fa-clock-rotate-left mr-2"></i>Historique</a></li>
           </ul>
         </div>
@@ -64,6 +64,13 @@
           </div>
         </div>
         <!-- End NaveBar -->
+
+        <div class="content_body p-5 bg-amber-100 h-full">
+
+            
+
+        </div>
+
       </div>
       
        <!-- End Sidebar -->
