--- a/presence.html
+++ b/presence.html
@@ -8,7 +8,7 @@
   <!-- Tailwind css cdn -->
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <!-- file css  -->
-  <!-- <link rel="stylesheet" href="/src/css/style.css"> -->
+  <link rel="stylesheet" href="/src/css/style.css">
   <!-- normalize css file -->
   <!-- <link rel="stylesheet" href="/src/css/normalize.css"> -->
   <!-- font Awesome Library -->
@@ -21,32 +21,48 @@
       rel="stylesheet"
     />
 </head>
-<body class=" bg-teal-300">
+<body>
 
-      <div class="flex w-full">
+      <div class="flex w-full h-screen overflow-hidden">
       <!-- Start Sidebar -->
-      <div class="z-10 sidebar bg-blue-950 text-white min-w-[200px] h-screen p-5 flex flex-col justify-between shadow-[2px_0px_10px_#444]">
+      <div class="max-sm:overflow-hidden z-10 sidebar bg-blue-950 text-white w-[250px] max-sm:w-[50px] h-screen md:p-5 p-2 flex flex-col justify-between shadow-[2px_0px_10px_#444]">
         <div>
           <div class="logo text-center mb-10 ">
             <img src="" alt="">
             <h1 class="font-black text-2xl">Enaa</h1>
           </div>
   
-          <ul class="list flex flex-col gap-y-3">
+          <ul class="list flex flex-col sm:gap-y-3 gap-y-10">
             <li>
-              <a href="#" class="block p-1 rounded-lg hover:bg-sky-800 transition-all duration-300  border-transparent hover:border-blue-500 hover:pl-2">
-                <i class="fa-solid fa-house mr-2"></i>Tableux de bord
+              <a href="#" class="max-sm:text-[0px] block p-1 rounded-lg hover:bg-sky-800 transition-all duration-300  border-transparent hover:border-blue-500 hover:pl-2">
+                <i class="fa-solid fa-house mr-2 text-base"></i>Tableux de bord
               </a>
             </li>
-            <li><a href="#" class="block p-1 rounded-lg hover:bg-sky-800 transition-all duration-300  border-transparent hover:border-blue-500 hover:pl-2"><i class="fa-solid fa-users mr-2"></i>Etudiants</a></li>
-            <li><a href="#" class="block p-1 rounded-lg bg-sky-800 transition-all duration-300  border-transparent hover:border-sky-500 hover:pl-2"><i class="fa-solid fa-user mr-2"></i>Presence</a></li>
-            <li><a href="#" class="block p-1 rounded-lg hover:bg-sky-800 transition-all duration-300  border-transparent hover:border-blue-500 hover:pl-2"><i class="fa-solid fa-clock-rotate-left mr-2"></i>Historique</a></li>
+
+            <li>
+              <a href="#" class="max-sm:text-[0px] block p-1 rounded-lg hover:bg-sky-800 transition-all duration-300  border-transparent hover:border-blue-500 hover:pl-2">
+                <i class="fa-solid fa-users mr-2 text-base"></i>Etudiants
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="max-sm:text-[0px] block p-1 rounded-lg bg-sky-800 transition-all duration-300  border-transparent hover:border-sky-500 hover:pl-2">
+                <i class="fa-solid fa-user mr-2 text-base"></i>Presence
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="max-sm:text-[0px] block p-1 rounded-lg hover:bg-sky-800 transition-all duration-300  border-transparent hover:border-blue-500 hover:pl-2">
+                <i class="fa-solid fa-clock-rotate-left mr-2 text-base"></i>Historique
+              </a>
+            </li>
+            
           </ul>
         </div>
 
         <div class="logeout text-red-500 cursor-pointer hover:text-red-400">
           <i class="fa-solid fa-arrow-right-from-bracket "></i>
-          <h1 class="inline">Deconnexion</h1>
+          <h1 class="inline max-sm:hidden">Deconnexion</h1>
         </div> 
 
       </div>
@@ -73,7 +89,7 @@
 
       </div>
       
-       <!-- End Sidebar -->
+      <!-- End Sidebar -->
     </div>
 
     <script src="src/js/main.js"></script>
