--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,27 @@
 </head>
 <body>
 
-  <h1>hello</h1>
+  <!-- <div class="flex flex-col gap-2 w-64">
+  <label for="date" class="text-sm font-medium text-gray-700">
+    Select date
+  </label>
+
+  <input
+    id="date"
+    type="date"
+    class="rounded-md border border-gray-300 px-3 py-2 text-sm
+           focus:outline-none focus:ring-2 focus:ring-black"
+  />
+</div> -->
+
+
+                      <label for="present" 
+                            class="radio_option px-[16px] py-[8px] flex items-center 
+                                   gap-[6px] rounded-[6px] cursor-pointer transition-all duration-300
+                                   peer-checked:bg-green-500 peer-checked:text-white">
+                        <input type="radio" name="persone1" value="present" class="hidden peer" checked>
+                        <span>Present</span>
+                      </label>
 
 
     <script src="js/main.js"></script>
