--- a/presence.html
+++ b/presence.html
@@ -97,7 +97,7 @@
                 <!-- End Search -->
 
                 <!-- Start Button -->
-                <button class="flex items-center text-white gap-2 bg-[#6366f1] p-3 rounded-lg cursor-pointer hover:bg-[#4f46e5] transition-all duration-300">
+                <button id="btn_save" class="flex items-center text-white gap-2 bg-[#6366f1] p-3 rounded-lg cursor-pointer hover:bg-[#4f46e5] transition-all duration-300">
                    <img class="w-[20px]" src="public/diskette.png" alt="">
                    Enregister la presennce
                 </button>
@@ -118,7 +118,7 @@
                 <!-- Start present -->
                 <div class="footer_bottom space-y-5">
 
-                  <div class="persone flex items-center justify-between bg-[#0a0e27] rounded-lg text-white py-2 px-5 hover:bg-[#141b3a] transition-all duration-200 hover:border-2 hover:border-[#1c339a]">
+                  <!-- <div class="persone flex items-center justify-between bg-[#0a0e27] rounded-lg text-white py-2 px-5 hover:bg-[#141b3a] transition-all duration-200 hover:border-2 hover:border-[#1c339a]">
 
                     <div class="info flex items-center gap-4">
 
@@ -137,21 +137,21 @@
                             class="radio_option sm:px-[16px] sm:py-[8px] px-[6px] py-[4px] flex items-center 
                                    gap-[6px] rounded-[6px] cursor-pointer transition-all duration-300
                                    ">
-                        <input type="radio" name="persone1" value="present" class="hidden peer" checked>
+                        <input type="checkbox" name="persone1" value="present" class="hidden">
                         <span>Present</span>
                       </label>
 
                       <label for="absent" 
                              class="radio_option sm:px-[16px] sm:py-[8px] px-[6px] py-[4px] flex items-center 
                                    sm:gap-[6px] gap-[3px] rounded-[6px] cursor-pointer transition-all duration-300">
-                      <input class="hidden" type="radio" name="persone1" value="absent">
+                      <input class="hidden" type="checkbox" name="persone1" value="absent">
                       <span>Absent</span>
                       </label>
 
                       <label for="retard" 
                              class="radio_option sm:px-[16px] sm:py-[8px] px-[6px] py-[4px] flex items-center 
                                    gap-[6px] rounded-[6px] cursor-pointer transition-all duration-300">
-                      <input class="hidden" type="radio" name="persone1" value="retard">
+                      <input class="hidden" type="checkbox" name="persone1" value="retard">
                       <span>Retard</span>
                       </label>
 
@@ -198,11 +198,11 @@
 
                     </div>
 
-                  </div>
+                  </div> -->
 
                   <!-- Start Retard detaile -->
 
-                  <div class="retard_ditail rounded-lg p-5 bg-[#141b3a] border-l-[#f59e0b] border-l-3 text-white hover:bg-blue-950 transition-all duration-300 hover:border-2 hover:border-[#f59e0b]">
+                  <!-- <div class="retard_ditail rounded-lg p-5 bg-[#141b3a] border-l-[#f59e0b] border-l-3 text-white hover:bg-blue-950 transition-all duration-300 hover:border-2 hover:border-[#f59e0b]">
                     <h2 class="text-[#f59e0b] mb-5 ">Iformations du retard</h2>
                     <div class="retard_info flex items-center justify-between gap-3">
 
@@ -217,11 +217,11 @@
                       </div>
 
                     </div>
-                  </div>
+                  </div> -->
 
                   <!-- End Retard detaile -->
             
-                  <div class="persone flex items-center justify-between bg-[#0a0e27] rounded-lg text-white py-2 px-5 hover:bg-[#141b3a] transition-all duration-200 hover:border-2 hover:border-[#1c339a]">
+                  <!-- <div class="persone flex items-center justify-between bg-[#0a0e27] rounded-lg text-white py-2 px-5 hover:bg-[#141b3a] transition-all duration-200 hover:border-2 hover:border-[#1c339a]">
 
                     <div class="info flex items-center gap-4">
 
@@ -260,13 +260,15 @@
 
                     </div>
 
-                  </div>
-
+                  </div> -->
+                  
                 </div>
                 <!-- End present -->
 
               </div>
               <!-- End footer -->
+
+
 
             </div>
 
