--- a/presence.html
+++ b/presence.html
@@ -40,7 +40,7 @@
             </li>
 
             <li>
-              <a href="#" class="max-sm:text-[0px] block p-1 rounded-lg hover:bg-sky-800 transition-all duration-300  border-transparent hover:border-blue-500 hover:pl-2">
+              <a href="./Étudiants/etudiants.html" class="max-sm:text-[0px] block p-1 rounded-lg hover:bg-sky-800 transition-all duration-300  border-transparent hover:border-blue-500 hover:pl-2">
                 <i class="fa-solid fa-users mr-2 text-base"></i>Etudiants
               </a>
             </li>
