--- a/presence.html
+++ b/presence.html
@@ -46,7 +46,7 @@
             </li>
 
             <li>
-              <a href="#" class="max-sm:text-[0px] block p-1 rounded-lg bg-sky-800 transition-all duration-300  border-transparent hover:border-sky-500 hover:pl-2">
+              <a href="presence.html" class="max-sm:text-[0px] block p-1 rounded-lg bg-sky-800 transition-all duration-300  border-transparent hover:border-sky-500 hover:pl-2">
                 <i class="fa-solid fa-user mr-2 text-base"></i>Presence
               </a>
             </li>
@@ -81,9 +81,9 @@
         </div>
         <!-- End NaveBar -->
 
-        <div class="content_body mt-[50px] p-5 overflow-hidden bg-amber-100 h-full">
+        <div class="content_body mt-[50px] p-5 overflow-hidden h-full">
 
-            <div class="content_box w-full rounded-lg bg-blue-900 p-5 overflow-hidden">
+            <div class="content_box w-full min-h-screen rounded-lg bg-blue-900 p-5 overflow-hidden">
               <!-- Start head -->
               <div class="head flex justify-between items-center flex-wrap gap-3 border-b-2 pb-5 border-[#2d3a5f] mb-3">
 
