--- a/Étudiants/etudiants.html
+++ b/Étudiants/etudiants.html
@@ -49,7 +49,7 @@
           </li>
 
           <li>
-            <a href="#"
+            <a href="../../presence.html"
               class="max-sm:text-[0px] block p-2 rounded-l-lg hover:bg-sky-800 transition-all duration-300  border-transparent hover:border-sky-500 hover:pl-2">
               <i class="fa-solid fa-user mr-2 text-base"></i>Presence
             </a>
