--- a/Login.html
+++ b/Login.html
@@ -38,10 +38,11 @@
       </div>
 
     </form>
+    <p class="text-red-600 text-[12px] font-normal hidden" id = "incorrect">😒 username or password incorrect</p>
 
     <button class="ml-[50%] mt-[50px] translate-x-[-50%] py-2 px-8 bg-blue-500 font-bold text-white rounded-lg hover:bg-blue-700 transition-all duration-300 cursor-pointer" id="btn_login" onmouseenter="run(this)">Login</button>
   </div>
 
-    <script src="src/js/main.js"></script>
+    <script src="src/js/login.js"></script>
 </body>
 </html>
