--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="flex w-ful h-full overflow-hidden ">
       <!-- Start Sidebar -->
-      <div class="fixed max-sm:overflow-hidden z-10 sidebar h-screen bg-blue-950 text-white w-[250px] max-sm:w-[50px] sm:w-[200px]  md:p-5 p-2 flex flex-col justify-between shadow-[2px_0px_10px_#444]">
+      <div class="sidebar fixed max-sm:overflow-hidden z-10 h-screen bg-blue-950 text-white w-[250px] max-sm:w-[50px] sm:w-[200px] md:p-5 p-2 flex flex-col justify-between shadow-[2px_0px_10px_#444]">
         <div>
           <div class="logo text-center mb-10 ">
             <i class="fa-solid fa-bars"></i>
@@ -60,7 +60,7 @@
           </ul>
         </div>
 
-        <div class="logeout text-red-500 cursor-pointer hover:text-red-400">
+        <div onclick="out()" class="logeout text-red-500 cursor-pointer hover:text-red-400">
           <i class="fa-solid fa-arrow-right-from-bracket "></i>
           <h1 class="inline max-sm:hidden">Deconnexion</h1>
         </div> 
@@ -87,6 +87,7 @@
 
 
   <script src="src/js/main.js"></script>
+  <script src="src/js/login.js"></script>
 </body>
 
 </html>
