--- a/Login.html
+++ b/Login.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
     />
 </head>
-<body class="flex justify-center items-center h-screen">
+<body class="flex justify-center items-center h-screen bg-[linear-gradient(135deg,#0a0e27 0%, #1a1f3a 100%)]">
 
   <div class="bg-blue-950 w-90 h-90 p-6 rounded-lg text-white overflow-hidden">
     <h1 class="text-center font-medium">Admin</h1>
