--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   
           <ul class="list flex flex-col sm:gap-y-3 gap-y-10">
             <li>
-              <a href="#" class="max-sm:text-[0px] block p-1 rounded-lg hover:bg-sky-800 transition-all duration-300  border-transparent hover:border-blue-500 hover:pl-2">
+              <a href="./Étudiants/dashboard.html" class="max-sm:text-[0px] block p-1 rounded-lg hover:bg-sky-800 transition-all duration-300  border-transparent hover:border-blue-500 hover:pl-2">
                 <i class="fa-solid fa-house mr-2 text-base"></i>Tableux de bord
               </a>
             </li>
