--- a/Étudiants/etudiants.html
+++ b/Étudiants/etudiants.html
@@ -25,31 +25,28 @@
 
   <div class="grid grid-rows-1 overflow-hidden">
     <!-- Start Sidebar -->
-    <div
-      class="max-sm:overflow-hidden z-2 sidebar bg-blue-950 text-white w-[250px] max-sm:w-[50px] h-screen md:pl-5 md:pb-10 flex flex-col justify-between fixed">
-      <div>
-        <div class="logo pt-2 mb-10">
-          <img src="" alt="">
-          <h1 class="font-black text-5xl">Enaa</h1>
-        </div>
-
-        <ul class="list flex flex-col sm:gap-y-3 gap-y-10">
-          <li>
-            <a href="/Étudiants/dashboard.html"
-              class="max-sm:text-[0px] block p-2 rounded-l-lg hover:bg-sky-800 transition-all duration-300  border-transparent hover:border-blue-500 hover:pl-2">
-              <i class="fa-solid fa-house mr-2 text-base"></i>Tableux de bord
-            </a>
-          </li>
-
-          <li>
-            <a href="#"
-              class="max-sm:text-[0px] block p-2 rounded-l-lg bg-sky-800 transition-all duration-300  border-transparent hover:border-blue-500 hover:pl-2">
-              <i class="fa-solid fa-users mr-2 text-base"></i>Etudiants
-            </a>
-          </li>
+      <div class="sidebar fixed max-sm:overflow-hidden z-10 h-screen bg-blue-950 text-white w-[250px] max-sm:w-[50px] sm:w-[200px] md:p-5 p-2 flex flex-col justify-between shadow-[2px_0px_10px_#444]">
+        <div>
+          <div class="logo text-center mb-10 ">
+            <i class="fa-solid fa-bars"></i>
+            <h1 class="font-black text-2xl max-sm:hidden">Enaa</h1>
+          </div>
+  
+          <ul class="list flex flex-col sm:gap-y-3 gap-y-10">
+            <li>
+              <a href="dashboard.html" class="max-sm:text-[0px] block p-1 rounded-lg hover:bg-sky-800 transition-all duration-300  border-transparent hover:border-blue-500 hover:pl-2">
+                <i class="fa-solid fa-house mr-2 text-base"></i>Tableux de bord
+              </a>
+            </li>
 
             <li>
-              <a href="../presence.html" class="max-sm:text-[0px] block p-1 rounded-lg transition-all duration-300  border-transparent hover:border-sky-500 hover:pl-2">
+              <a href="etudiants.html" class="max-sm:text-[0px] block p-1 bg-sky-800 rounded-lg hover:bg-sky-800 transition-all duration-300  border-transparent hover:border-blue-500 hover:pl-2">
+                <i class="fa-solid fa-users mr-2 text-base"></i>Etudiants
+              </a>
+            </li>
+
+            <li>
+              <a href="../presence.html" class="max-sm:text-[0px] block p-1 rounded-lg  transition-all duration-300  border-transparent hover:border-sky-500 hover:pl-2">
                 <i class="fa-solid fa-user mr-2 text-base"></i>Presence
               </a>
             </li>
@@ -76,12 +73,12 @@
 
     <div class="content flex-1 ml-[250px] max-sm:ml-[50px] sm:ml-[200px] z-0">
       <!-- Start NaveBar -->
-      <div class="navbar min-w-full h-[50px] bg-blue-950 p-3 z-1 fixed">
-        <div class="profil h-full w-fit ml-auto flex items-center gap-2">
-          <img class="w-5 rounded-full" src="/public/avatar.avif" alt="">
-          <h1 class="font-bold text-white"></h1>
+        <div class="navbar z-10 fixed w-[calc(100%-250px)] max-sm:w-[calc(100%-50px)] sm:w-[calc(100%-200px)] h-[50px] bg-blue-950 p-3 px-5">
+          <div class="profil h-full w-fit ml-auto flex items-center gap-2">
+            <img class="w-5 rounded-full" src="/public/avatar.avif" alt="">
+            <h1 class="font-bold text-white">Mouad</h1>
+          </div>
         </div>
-      </div>
       <!-- End NaveBar -->
 
       <!-- Start Gestion des Étudiants -->
